---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Pretend holmium solution takes any quality
    - Try to pre-filter the fluidboxes
    - Try to use a dummy holmium solution item
    - Just use 100 of the item directly
    - Abandon output fluidbox
    - Ponder about hiding the inactive covers
    - What if i define both outputs?
    - Crafting machine fluidboxes must be input or output types.
    - Aaaand this overrides everything too
    - Hmm what if i split up into two entities somehow
    - Hmm this also does not work nicely
    - Just add an invisible item that looks like a quality thing
    - Use the item product as the multiplier signaller
    - Make the item spawnable so it lists no rocket capacity
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 11. 26
  Info:
    - Begin conversion to per-quality chemical plants
    - Give the tiered chemical plants an icon
    - Shuffle around how holmium solution is shown
    - Step away from using unknown quality
    - Hide the quality icon for the normal tier
    - Fix normal quality giving 0 fluid
    - Fix math order
    - Begin work on control scripting
    - Try to swap entity with the right quality
    - Mess around with fast replacing
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 26
  Info:
    - Initial commit