@@ -2,4 +2,4 @@
 holmium-chemical-plant=Holmium chemical plant
 
 [item-name]
-holmium-solution-quality-multiplier=Holmium solution quality multiplier
+holmium-solution-quality-based-productivity=Holmium solution quality based productivity
